--- a/StyleSheet1.css
+++ b/StyleSheet1.css
@@ -823,7 +823,7 @@ button {
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
-        -webkit-box-orient: vertical;
+        -webkit-box-orient: horizontal;
         -webkit-box-direction: normal;
         -ms-flex-direction: column;
         flex-direction: column;
